# chat-crew

./: NOTES.md  README.md  requirements.txt
chat_crew/: README.md  pyproject.toml
chat_crew/src/chat_crew/: crew.py  main.py
chat_flow/: README.md  pyproject.toml
chat_flow/src/chat_flow/: main.py
