[project]
name = "chat_crew"
version = "0.1.0"
description = "chat-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
chat_crew = "chat_crew.main:run"
run_crew = "chat_crew.main:run"
train = "chat_crew.main:train"
replay = "chat_crew.main:replay"
test = "chat_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
